# hey-ya

./: .env.example  .gitignore  README.md  SPEC.md  docker-compose.yml  docker.compose.yml  start.sh
 .github/: copilot-instructions.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/config/: settings.py  urls.py
backend/scorekeeper/: admin.py  apps.py  auth_views.py  models.py  serializers.py  urls.py  views.py
backend/scorekeeper/migrations/: 0001_initial.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: README.md  package-lock.json
frontend/public/: index.html
frontend/src/: App.css  App.js  api.js
frontend/src/components/: Login.css  Login.js  Scoreboard.css  Scoreboard.js  SessionHistory.css  SessionHistory.js
